fixed forecast icon not visible on lane header

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -150,6 +150,7 @@ h3 {
   font-size: 1.2em;
   font-weight: bold;
   padding: 5px;
+  display: flex;
 }
 
 .board .lane .forecast-icon {
